--- a/monkey/monkey_island/cc/ui/src/styles/Collapse.scss
+++ b/monkey/monkey_island/cc/ui/src/styles/Collapse.scss
@@ -1,4 +1,4 @@
-$transition: 500ms cubic-bezier(0.4, 0.1, 0.1, 0.5);
+$transition: 300ms cubic-bezier(0.6, 0.3, 0.3, 0.6);
 
 $danger-color: #d9acac;
 $info-color: #ade3eb;
@@ -68,27 +68,12 @@ $default-color: #e0ddde;
   overflow: hidden;
 }
 
+.collapsing {
+  height:100% !important;
+}
+
 .collapse-item .content {
   padding: 2rem 0;
-  transition: transform $transition;
-  will-change: transform;
-  $offset: 10px;
-
-  &.collapsing {
-    transform: translateY(-$offset);
-  }
-
-  &.collapse-comp {
-    transform: translateY(-$offset);
-  }
-
-  &.expanding {
-    transform: translateX(0px);
-  }
-
-  &.expanded {
-    transform: translateX(0px);
-  }
 }
 
 .collapse-item .text {
